--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "VingaCoin",
+  "name": "CosmosCoin",
   "version": "1.0.0",
-  "description": "The VingaCoin API server",
+  "description": "The CosmosCoin API server",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uuid": "^8.3.2"
   }
 }
